--- a/Sun9pm notebooks/Kasy - Monday night.ipynb
+++ b/Sun9pm notebooks/Kasy - Monday night.ipynb
@@ -1411,13 +1411,526 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>keys</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>province</th>\n",
+       "      <th>websites</th>\n",
+       "      <th>Abbrev</th>\n",
+       "      <th>Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "      <td>117</td>\n",
+       "      <td>121</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        State  address  city  country  keys  latitude  longitude  name  \\\n",
+       "0     Alabama       34    34       34    34        34         34    34   \n",
+       "1      Alaska        2     2        2     2         2          2     2   \n",
+       "2     Arizona       32    32       32    32        32         32    32   \n",
+       "3    Arkansas       25    25       25    25        25         25    25   \n",
+       "4  California      121   121      121   121       121        121   121   \n",
+       "\n",
+       "   postalCode  province  websites  Abbrev  Code  \n",
+       "0          34        34        34      34    34  \n",
+       "1           2         2         2       2     2  \n",
+       "2          32        32        32      32    32  \n",
+       "3          25        25        25      25    25  \n",
+       "4         121       121       117     121   121  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcd2 = mcd1.groupby([\"State\"]).count().reset_index()\n",
+    "mcd2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mcd2 = sbd1.groupby([\"State/Province\"]).count().reset_index()\n",
-    "sbd2.head()"
+    "mcd2.to_csv(r'.\\mcdstates.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>keys</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>province</th>\n",
+       "      <th>websites</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Abbrev</th>\n",
+       "      <th>Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>324 Main St</td>\n",
+       "      <td>Massena</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/ny/massena/324mainst/-1161002137</td>\n",
+       "      <td>44.92130</td>\n",
+       "      <td>-74.89021</td>\n",
+       "      <td>McDonald's</td>\n",
+       "      <td>13662</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>http://mcdonalds.com,http://www.mcdonalds.com/...</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>N.Y.</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>530 Clinton Ave</td>\n",
+       "      <td>Washington Court House</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/oh/washingtoncourthouse/530clintonave/-7914...</td>\n",
+       "      <td>39.53255</td>\n",
+       "      <td>-83.44526</td>\n",
+       "      <td>Wendy's</td>\n",
+       "      <td>43160</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>http://www.wendys.com</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>408 Market Square Dr</td>\n",
+       "      <td>Maysville</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/ky/maysville/408marketsquaredr/1051460804</td>\n",
+       "      <td>38.62736</td>\n",
+       "      <td>-83.79141</td>\n",
+       "      <td>Frisch's Big Boy</td>\n",
+       "      <td>41056</td>\n",
+       "      <td>KY</td>\n",
+       "      <td>http://www.frischs.com,https://www.frischs.com...</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>Ky.</td>\n",
+       "      <td>KY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6098 State Highway 37</td>\n",
+       "      <td>Massena</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/ny/massena/6098statehighway37/-1161002137</td>\n",
+       "      <td>44.95008</td>\n",
+       "      <td>-74.84553</td>\n",
+       "      <td>McDonald's</td>\n",
+       "      <td>13662</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>http://mcdonalds.com,http://www.mcdonalds.com/...</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>N.Y.</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>139 Columbus Rd</td>\n",
+       "      <td>Athens</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/oh/athens/139columbusrd/990890980</td>\n",
+       "      <td>39.35155</td>\n",
+       "      <td>-82.09728</td>\n",
+       "      <td>OMG! Rotisserie</td>\n",
+       "      <td>45701</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>http://www.omgrotisserie.com,http://omgrotisse...</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 address                    city country  \\\n",
+       "0            324 Main St                 Massena      US   \n",
+       "1        530 Clinton Ave  Washington Court House      US   \n",
+       "2   408 Market Square Dr               Maysville      US   \n",
+       "3  6098 State Highway 37                 Massena      US   \n",
+       "4        139 Columbus Rd                  Athens      US   \n",
+       "\n",
+       "                                                keys  latitude  longitude  \\\n",
+       "0                us/ny/massena/324mainst/-1161002137  44.92130  -74.89021   \n",
+       "1  us/oh/washingtoncourthouse/530clintonave/-7914...  39.53255  -83.44526   \n",
+       "2       us/ky/maysville/408marketsquaredr/1051460804  38.62736  -83.79141   \n",
+       "3       us/ny/massena/6098statehighway37/-1161002137  44.95008  -74.84553   \n",
+       "4               us/oh/athens/139columbusrd/990890980  39.35155  -82.09728   \n",
+       "\n",
+       "               name postalCode province  \\\n",
+       "0        McDonald's      13662       NY   \n",
+       "1           Wendy's      43160       OH   \n",
+       "2  Frisch's Big Boy      41056       KY   \n",
+       "3        McDonald's      13662       NY   \n",
+       "4   OMG! Rotisserie      45701       OH   \n",
+       "\n",
+       "                                            websites     State Abbrev Code  \n",
+       "0  http://mcdonalds.com,http://www.mcdonalds.com/...  New York   N.Y.   NY  \n",
+       "1                              http://www.wendys.com      Ohio   Ohio   OH  \n",
+       "2  http://www.frischs.com,https://www.frischs.com...  Kentucky    Ky.   KY  \n",
+       "3  http://mcdonalds.com,http://www.mcdonalds.com/...  New York   N.Y.   NY  \n",
+       "4  http://www.omgrotisserie.com,http://omgrotisse...      Ohio   Ohio   OH  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcd3 = pd.merge(fastdf, state, how='left', left_on='province', right_on='Code')\n",
+    "mcd3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>keys</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>province</th>\n",
+       "      <th>websites</th>\n",
+       "      <th>Abbrev</th>\n",
+       "      <th>Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "      <td>226</td>\n",
+       "      <td>236</td>\n",
+       "      <td>236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "      <td>198</td>\n",
+       "      <td>208</td>\n",
+       "      <td>208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>145</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "      <td>618</td>\n",
+       "      <td>676</td>\n",
+       "      <td>676</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        State  address  city  country  keys  latitude  longitude  name  \\\n",
+       "0     Alabama      236   236      236   236       236        236   236   \n",
+       "1      Alaska       14    14       14    14        14         14    14   \n",
+       "2     Arizona      208   208      208   208       208        208   208   \n",
+       "3    Arkansas      151   151      151   151       151        151   151   \n",
+       "4  California      676   676      676   676       676        676   676   \n",
+       "\n",
+       "   postalCode  province  websites  Abbrev  Code  \n",
+       "0         236       236       226     236   236  \n",
+       "1          14        14        13      14    14  \n",
+       "2         208       208       198     208   208  \n",
+       "3         151       151       145     151   151  \n",
+       "4         676       676       618     676   676  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcd4 = mcd3.groupby([\"State\"]).count().reset_index()\n",
+    "mcd4.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcd4.to_csv(r'.\\faststates.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
